# yolov5_4HIVIEW

./: CMakeLists.txt  ImageResize.cpp  ImageResize.h  README.md  Yolov5.cpp  Yolov5.h  main.cpp
svp/inc/common/: sample_comm_nnie.h  sample_comm_svp.h
svp/inc/nnie/: sample_nnie.h  sample_svp_nnie_software.h
svp/src/common/: sample_comm_nnie.c
svp/src/nnie/: sample_nnie.c  sample_svp_nnie_software.c
